--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@astrojs/starlight": "^0.30.3",
     "astro": "^5.1.2",
     "og-images-generator": "^0.3.0",
-    "sharp": "^0.32.5"
+    "sharp": "^0.32.5",
+    "@pagefind/default-ui": "^1.0.4",
+    "pagefind": "^1.0.4"
   }
 }
