--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^4.0.3",
+    "@astrojs/sitemap": "^3.2.1",
     "@astrojs/starlight": "^0.30.3",
-    "astro": "^5.1.2",
+    "@astrojs/vercel": "^8.0.1",
+    "astro": "^5.1.1",
+    "astro-seo-metadata": "^0.6.0",
     "og-images-generator": "^0.3.0",
-    "sharp": "^0.32.5",
-    "@pagefind/default-ui": "^1.0.4",
-    "pagefind": "^1.0.4"
+    "sharp": "^0.32.5"
   }
 }
+
+
+
